--- a/libft/Makefile
+++ b/libft/Makefile
@@ -14,7 +14,7 @@ CC=gcc
 SRC_DIR=./srcs
 OBJ_DIR=./objs
 RAW_SRC=ft_memchr.c ft_memccpy.c ft_memmove.c ft_memcpy.c \
-	 ft_memcmp.c ft_strlen.c ft_strdup.c ft_strcpy.c ft_strncpy.c ft_strcat.c \
+	 ft_memcmp.c ft_strdup.c ft_strcpy.c ft_strncpy.c ft_strcat.c \
 	 ft_strncat.c ft_strlcat.c ft_strchr.c ft_strrchr.c ft_strstr.c \
 	 ft_strnstr.c ft_strcmp.c ft_strncmp.c ft_atoi.c ft_isalpha.c ft_isdigit.c \
 	 ft_isalnum.c ft_isascii.c ft_isprint.c ft_toupper.c ft_tolower.c \
@@ -27,7 +27,7 @@ RAW_SRC=ft_memchr.c ft_memccpy.c ft_memmove.c ft_memcpy.c \
 	 ft_isblank.c ft_islower.c ft_isspace.c ft_isupper.c ft_isxdigit.c \
 	 ft_isgraph.c ft_strisnumeric.c ft_strislowercase.c ft_strisalpha.c \
 	 ft_iscntrl.c ft_strisprintable.c ft_strlowcase.c ft_strupcase.c
-RAW_ASS=ft_memset.s
+RAW_ASS=ft_memset.s ft_strlen.s
 # RAW_OBJS=$(RAW_SRC:.c=.o)
 RAW_OBJS=ft_memchr.o ft_memccpy.o ft_memmove.o ft_memcpy.o \
 	 ft_memcmp.o ft_strlen.o ft_strdup.o ft_strcpy.o ft_strncpy.o ft_strcat.o \
